--- a/client/src/app/components/search-result.component.html
+++ b/client/src/app/components/search-result.component.html
@@ -62,7 +62,7 @@
             <mat-card-header>
               <div>
                 <mat-card-subtitle>
-                  search result: {{nextPageToken? restaurants.length +' +':restaurants.length}}
+                  search result: {{restaurants.length}}
                 </mat-card-subtitle>
               </div>
             </mat-card-header>
@@ -75,7 +75,7 @@
                         <!-- <img src="../../assets/placeholder-image.jpg" class="img rounded-start"> -->
                         <img src="{{r.photoRef |convert}}" class="img rounded-start">
                       </div>
-                      <div class="col-md-6" (click)="onSelect(r)">
+                      <div class="col-md-6" (click)="onSelectRes(r)">
                         <div class="card-body">
                           <div class="row">
                             <div class="col-10">
@@ -105,7 +105,7 @@
                             <mat-icon>bookmark</mat-icon>
                             <div>
                               <mat-menu #menu="matMenu">
-                                <button mat-menu-item [matMenuTriggerFor]="collectionslist" *ngIf="collections.length>0; else pleaseCreate">
+                                <button mat-menu-item [matMenuTriggerFor]="collectionslist" *ngIf="!collectionsEmpty; else pleaseCreate">
                                   <mat-icon>library_add</mat-icon>
                                   <span>Add to Collection</span>
                                 </button>
