--- a/client/src/app/components/place-details.component.html
+++ b/client/src/app/components/place-details.component.html
@@ -5,7 +5,7 @@
             <div class="d-flex flex-row justify-content-between" style="width: 100%;">
                 <div class="d-flex flex-row">
                     <div>
-                        <h1> {{placeDetails.name}} </h1>
+                        <h1> {{place.name}} </h1>
                     </div>
                         <div class="align-self-center ms-2">
                             <p class="card-text">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-5">
                     <!-- info -->
                     <div class="card mb-3 mt-4">
                         <div class="card-header">
@@ -100,7 +100,7 @@
                         </div>
                         <div class="card-body">
                            <div class="row">
-                                <div class="col-6">
+                                <div class="col-12">
                                     <mat-list>
                                         <mat-list-item>
                                             <span matListItemTitle>
@@ -111,22 +111,19 @@
                                         </mat-list-item>
                                     </mat-list>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-12">
                                     <mat-list>
                                         <mat-list-item>
                                             <span matListItemTitle>
                                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M416 0C400 0 288 32 288 176V288c0 35.3 28.7 64 64 64h32V480c0 17.7 14.3 32 32 32s32-14.3 32-32V352 240 32c0-17.7-14.3-32-32-32zM64 16C64 7.8 57.9 1 49.7 .1S34.2 4.6 32.4 12.5L2.1 148.8C.7 155.1 0 161.5 0 167.9c0 45.9 35.1 83.6 80 87.7V480c0 17.7 14.3 32 32 32s32-14.3 32-32V255.6c44.9-4.1 80-41.8 80-87.7c0-6.4-.7-12.8-2.1-19.1L191.6 12.5c-1.8-8-9.3-13.3-17.4-12.4S160 7.8 160 16V150.2c0 5.4-4.4 9.8-9.8 9.8c-5.1 0-9.3-3.9-9.8-9L127.9 14.6C127.2 6.3 120.3 0 112 0s-15.2 6.3-15.9 14.6L83.7 151c-.5 5.1-4.7 9-9.8 9c-5.4 0-9.8-4.4-9.8-9.8V16zm48.3 152l-.3 0-.3 0 .3-.7 .3 .7z"/></svg> Options
                                             </span>
-                                            <span>
-                                                Dine-In
-                                            </span>
-                                            <span>
-                                                Delivery
-                                            </span>
-                                            <span>
-                                                Takeout
-                                            </span>
+                                            <span *ngIf="placeDetails.dineIn" matListItemLine> Dine-In</span>
+                                            <span *ngIf="placeDetails.takeout" matListItemLine> Takeout</span>
+                                            <span *ngIf="placeDetails.delivery" matListItemLine> Delivery</span>
+                                            <span *ngIf="placeDetails.reservable" matListItemLine> Reservable</span>
+                                            <span *ngIf="placeDetails.wheelChairAccessible" matListItemLine> Wheelchair accessible</span>
                                         </mat-list-item>
+                                       
                                     </mat-list>
                                 </div>
                             </div>
